# cu117-torch113-env

./: Dockerfile
apps/: pyproject.toml
